--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ I have experience with various database engines, as well as developing, maintain
             <div class="featurette-icon"><i class="fas fa-desktop"></i></div>
 
             <div class="section-subheading">Desktop Development</div>
-            <p>WinForms • WPF • MAUI</p>
+            <p>WinForms • WPF • UWP • MAUI</p>
           </div>
 
 
