--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 
 
                 <li>
-                  <a href="https://github.com/Ari-Qu3sadillas" target="_blank" rel="noopener" aria-label="github">
+                  <a href="https://github.com/AriDevK" target="_blank" rel="noopener" aria-label="github">
                     <i class="fab fa-github big-icon"></i>
                   </a>
                 </li>
